# Autonomous-Landing-on-Moving-Platform

./: .gitignore  .xdp_d.DWAID1  README.md  link.txt  meeting.txt  python3.3-install.sh  ros-install.sh  ros-uninstall.sh
botello_ws/devel/: .catkin
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/src/image_transport_tutorial/: CMakeLists.txt  package.xml
catkin_ws/src/image_transport_tutorial/src/: my_subscriber.cpp
gps/: .bash_aliases  .bashrc_bridge  .bashrc_ros1  .bashrc_ros2  .gym_computers.txt  gps_config.rviz
gps/.rviz/: default.rviz  persistent_settings
gps/notebook_ws/: live-class-52.ipynb
gps/simulation_ws/src/summit_xl/sumit_xl_tools/: CMakeLists.txt  package.xml
gps/simulation_ws/src/summit_xl/sumit_xl_tools/config/: robot_localization.yaml
gps/simulation_ws/src/summit_xl/sumit_xl_tools/docs/: camera_joints_limits.txt
gps/simulation_ws/src/summit_xl/sumit_xl_tools/launch/: amcl.launch  main.launch  odom_navigation.launch  save_map.launch  start_efk.launch  start_efk_navsatdata.launch  start_ekf_onlyodom.launch  start_gmapping.launch  start_gmapping_loadfile.launch  start_gps_integration.launch  start_interactivemarker.launch  start_legdetector.launch  start_localization.launch  start_map_server.launch  start_mapping.launch  start_movebase.launch  start_movebase_new.launch  start_movebase_new_map.launch  start_movebase_new_odom.launch  start_nav_system.launch  start_navigation_with_gps_ekf.launch  start_navigation_with_map_v2.launch  start_navigation_without_map.launch  start_navsat.launch  start_person.launch  start_persons_for_project.launch  start_teleop.launch  start_teleop_with_interactivemarkers.launch  view_robot.launch
gps/simulation_ws/src/summit_xl/sumit_xl_tools/maps/: clean_map.yaml  my_new_map.pgm  my_new_map.yaml  new_clean_map.yaml  new_clean_map_empty.yaml
gps/simulation_ws/src/summit_xl/sumit_xl_tools/models/robotnik_space/: model.config  model.sdf
gps/simulation_ws/src/summit_xl/sumit_xl_tools/models/robotnik_space/meshes/: robotnik_indoor.dae
gps/simulation_ws/src/summit_xl/sumit_xl_tools/models/test_zone/: model.config
gps/simulation_ws/src/summit_xl/sumit_xl_tools/models/test_zone/meshes/: robotnik_indoor.dae
gps/simulation_ws/src/summit_xl/sumit_xl_tools/new_config/: costmap_common.yaml  costmap_global_laser.yaml  robot_localization_with_gps.yaml
gps/simulation_ws/src/summit_xl/sumit_xl_tools/params/: base_local_planner_params.yaml  costmap_common_params.yaml  gmapping_params.yaml
gps/simulation_ws/src/summit_xl/sumit_xl_tools/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
gps/simulation_ws/src/summit_xl/sumit_xl_tools/robots/: summit_xl.urdf.xacro  summit_xl_hl_omni.urdf.xacro  summit_xl_hl_omni_theconstruct.urdf.xacro  summit_xl_hl_omni_theconstruct_mod.urdf.xacro  summit_xl_theconstruct.urdf.xacro
gps/simulation_ws/src/summit_xl/sumit_xl_tools/rviz_config/: basic.rviz  create_map.rviz  gps.rviz  mapping.rviz  nav.rviz  navigation.rviz  navigation_map.rviz  navigation_odom.rviz  omni_project.rviz  sensors.rviz
gps/simulation_ws/src/summit_xl/sumit_xl_tools/scripts/: convert_GPS_to_XY.py  detect_person_camera.py  get_pose_service_client.py  get_pose_service_server.py  leg_detector_marker_publisher.py  move_ptz_cam.py  move_with_gps.py  patrole.py  pedestrian_detector.py  publish_tf_utm_to_map.py  publish_world_to_odom_and_map.py  utm_ex.py
gps/simulation_ws/src/summit_xl/sumit_xl_tools/spots/: basic_spots.yaml  spots_saved.yaml
gps/simulation_ws/src/summit_xl/sumit_xl_tools/urdf/wheels/: omni_wheel.urdf.xacro  rubber_wheel.urdf.xacro
pablo_uav_system_ws/devel/: .catkin  local_setup.sh  setup.sh
pablo_uav_system_ws/src/: device_drone.py  device_drone_new.py  device_gps.py  device_latlong.py  device_platform.py  line2Dplot.py  line3Dplot.py  line3Dplot_new.py  realtime-2Dtrajectory.py  realtime-3Dtrajectory.py  realtime-GPSplot.py  trajectories.py
tello_appie17_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
tello_madswamp_ver2_ws/devel/: .catkin  .rosinstall  local_setup.sh
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/: CMakeLists.txt  package.xml
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/config/: calibration_tello.yaml  settings.yaml  tags.yaml
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/config/mission/: setup.sh
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/include/tello_aerostack/: tello_aerostack.h
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/include/tello_main_node/: tello_ros.h  tello_sdk.h
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/include/tello_raw_localization/: tello_raw_localization.h
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/include/tello_teleop/: tello_teleop.h
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/include/tello_tf_broadcaster/: tello_tf_broadcaster.h
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/launch/: detect_tags.launch  tello.launch
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/project/: main_launcher.sh  mission_editor_launcher.sh
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/project/configs/mission/: behavior_catalog.yaml  behavior_tree_mission_file.yaml
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/src/tello_aerostack/: tello_aerostack.cpp  tello_aerostack_node.cpp
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/src/tello_main_node/: tello_node.cpp  tello_ros.cpp  tello_sdk.cpp
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/src/tello_raw_localization/: tello_raw_localization.cpp  tello_raw_localization_node.cpp
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/src/tello_teleop/: tello_teleop.cpp  tello_teleop_node.cpp
tello_madswamp_ver2_ws/src/Tello_Autonomous_ROS/tello_sdk/src/tello_tf_broadcaster/: tello_tf_broadcaster.cpp  tello_tf_broadcaster_node.cpp
tello_michealwachl_ws/src/robot_component_srvs/: CMakeLists.txt  LICENSE  package.xml
(+2040 files in other folders)
