<?xml version="1.0"?>
<package format="2">
	<name>robot_component_srvs</name>
	<version>1.0.0</version>
	<description>
    		This package is robot_component_srvs.
	</description>
	<author email="joseluis.sanlop@gmail.com">Jose Luis Sanchez-Lopez</author>
	<maintainer email="joseluis.sanlop@gmail.com">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/robot_component_srvs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>


  <export></export>
</package>


